# xrender

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  engine.cpp  engine.h  generate_shaders_header.py  main.cpp  pch.h
